[tool.poetry]
name = "ds-homework-01"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <bratsyun_m@ukr.net>"]
readme = "README.md"
packages = [{include = "ds_homework_01"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
